Kubernetes/infrastructure/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: whoami
  name: whoami
  namespace: infrastructure
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: whoami
  template:
    metadata:
      labels:
        io.kompose.service: whoami
    spec:
      containers:
        - image: traefik/whoami:latest
          name: whoami
          ports:
            - containerPort: 80

      restartPolicy: Always
