Kubernetes/infrastructure/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: whoami
  name: whoami
  namespace: infrastructure
spec:
  ports:
    - port: 80
  selector:
    io.kompose.service: whoami
