Kubernetes/infrastructure/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^whoami\.(.+)`)
      kind: Rule
      services:
        - name: whoami
          port: 80
